--- a/src/main/webapp/footer-template.html
+++ b/src/main/webapp/footer-template.html
@@ -1,3 +1,5 @@
+ <section id="bottom">
+ </section>
 <footer id="footer" class="midnight-blue">
         <div class="container">
             <div class="row">
@@ -6,7 +8,7 @@
                 </div>
             </div>
         </div>
-    </footer><!--/#footer-->
+</footer><!--/#footer-->
 
     <script src="../../js/jquery.js"></script>
     <script src="../../js/bootstrap.min.js"></script>
