--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -7,7 +7,7 @@
                 
                 <div class="collapse navbar-collapse navbar-right">
                     <ul class="nav navbar-nav">
-                        <li><a href="/home">Home</a></li>
+                        <li><a href="/">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cliente <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
@@ -19,7 +19,14 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedido <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/pedido/novo">Novo pedido</a></li>
-                                <li><a href="">Pedidos ativos</a></li>
+                                <li><a href="/pedido/todos">Todos os pedidos</a></li>
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Item <i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/item/novo">Cadastrar item</a></li>
+                                <li><a href="/item/todos">Itens cadastrados</a></li>
                             </ul>
                         </li>
                     </ul>
