--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -29,6 +29,13 @@
                                 <li><a href="/item/todos">Itens cadastrados</a></li>
                             </ul>
                         </li>
+                         <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Funcionário <i class="fa fa-angle-down"></i></a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/funcionario/novo">Cadastrar funcionário</a></li>
+                                <li><a href="/funcionario/todos">Funcionários cadastrados</a></li>
+                            </ul>
+                        </li>
                     </ul>
                 </div>
             </div><!--/.container-->
