--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -1,3 +1,14 @@
+<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/font-awesome.min.css" rel="stylesheet">
+<link href="/css/prettyPhoto.css" rel="stylesheet">
+<link href="/css/animate.min.css" rel="stylesheet">
+<link href="/css/main.css" rel="stylesheet">
+<link href="/css/responsive.css" rel="stylesheet">
+
+<script src="https://use.fontawesome.com/8b53352e30.js"></script>
+
+<link rel="shortcut icon" href="/images/favicon.ico">
+
  	<header id="header">
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
