Adicionado sticky footer

--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -9,7 +9,7 @@
 
 <link rel="shortcut icon" href="/images/favicon.ico">
 
- 	<header id="header">
+ 	<header id="header" class="page-row">
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
