--- a/src/main/webapp/footer-template.html
+++ b/src/main/webapp/footer-template.html
@@ -1,7 +1,5 @@
- <section id="bottom" >
- </section>
-<footer id="footer" class="midnight-blue">
-        <div class="container">
+<footer id="footer" class="midnight-blue page-row footer">
+        <div class="container footer">
             <div class="row">
                 <div class="col-sm-6">
                     &copy; 2013 <a target="_blank" href="http://shapebootstrap.net/" title="Free Twitter Bootstrap WordPress Themes and HTML templates">ShapeBootstrap</a>. All Rights Reserved.
