--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -30,7 +30,7 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedido <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/pedido/novo">Novo pedido</a></li>
-                                <li><a href="/pedido/ativos">Pedidos ativos</a></li>
+                                <li><a href="/pedido/info/ativos">Pedidos ativos</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
