--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -30,7 +30,10 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedido <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/pedido/novo">Novo pedido</a></li>
+                                <li><a href="/pedido/info/todos">Todos pedidos</a></li>
                                 <li><a href="/pedido/info/ativos">Pedidos ativos</a></li>
+                                <li><a href="/pedido/info/nao-pagos">Pedidos não pagos</a></li>
+                                <li><a href="/pedido/info/por/torre">Pedidos por torre</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
