Adicionados pedidos por dia da semana

--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -34,6 +34,7 @@
                                 <li><a href="/pedido/info/ativos">Pedidos ativos</a></li>
                                 <li><a href="/pedido/info/nao-pagos">Pedidos não pagos</a></li>
                                 <li><a href="/pedido/info/por/torre">Pedidos por torre</a></li>
+                                <li><a href="/pedido/info/por/dia">Pedidos por dia</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
