Adicionado Itens mais vendidos. Adicionado Gastos por cliente. Alterado Pedidos ativos para mostrar o nome do cliente

--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -24,6 +24,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/cliente/novo">Cadastrar cliente</a></li>
                                 <li><a href="/cliente/todos">Clientes cadastrados</a></li>
+                                <li><a href="/cliente/gastos">Gastos por cliente</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
@@ -42,6 +43,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="/item/novo">Cadastrar item</a></li>
                                 <li><a href="/item/todos">Itens cadastrados</a></li>
+                                <li><a href="/item/mais-vendidos">Itens mais vendidos</a></li>
                             </ul>
                         </li>
                          <li class="dropdown">
