--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -1,9 +1,11 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 <link href="/css/font-awesome.min.css" rel="stylesheet">
 <link href="/css/prettyPhoto.css" rel="stylesheet">
 <link href="/css/animate.min.css" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
 <link href="/css/responsive.css" rel="stylesheet">
+
 
 <script src="https://use.fontawesome.com/8b53352e30.js"></script>
 
