--- a/src/main/webapp/footer-template.html
+++ b/src/main/webapp/footer-template.html
@@ -8,11 +8,11 @@
         </div>
 </footer><!--/#footer-->
 
-    <script src="../../js/jquery.js"></script>
-    <script src="../../js/bootstrap.min.js"></script>
-    <script src="../../js/jquery.prettyPhoto.js"></script>
-    <script src="../../js/jquery.isotope.min.js"></script>
-    <script src="../../js/main.js"></script>
-    <script src="../../js/wow.min.js"></script>
-	<script src="../../js/bootstrap-datetimepicker.min.js"></script>
-	<script src="../../js/bootstrap-datetimepicker.pt-BR.js"></script>
+    <script src="/js/jquery.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/jquery.prettyPhoto.js"></script>
+    <script src="/js/jquery.isotope.min.js"></script>
+    <script src="/js/main.js"></script>
+    <script src="/js/wow.min.js"></script>
+	<script src="/js/bootstrap-datetimepicker.min.js"></script>
+	<script src="/js/bootstrap-datetimepicker.pt-BR.js"></script>
