Adicionado plug-in DataTables. Incluído para página de pedidos: todos, por dia, por torre, sem pagar

--- a/src/main/webapp/footer-template.html
+++ b/src/main/webapp/footer-template.html
@@ -16,3 +16,4 @@
     <script src="/js/wow.min.js"></script>
 	<script src="/js/bootstrap-datetimepicker.min.js"></script>
 	<script src="/js/bootstrap-datetimepicker.pt-BR.js"></script>
+	<script src="/js/datatables.min.js" type="text/javascript" charset="utf8"></script>
