--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -5,7 +5,7 @@
 <link href="/css/animate.min.css" rel="stylesheet">
 <link href="/css/main.css" rel="stylesheet">
 <link href="/css/responsive.css" rel="stylesheet">
-
+<link href="/css/datatables.min.css" rel="stylesheet" type="text/css" >
 
 <script src="https://use.fontawesome.com/8b53352e30.js"></script>
 
