Botão para criar novo pedido mais acessível

--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -29,10 +29,10 @@
                                 <li><a href="/cliente/gastos">Gastos por cliente</a></li>
                             </ul>
                         </li>
+                        <li><a href="/pedido/novo">Novo pedido</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedido <i class="fa fa-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Informações <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/pedido/novo">Novo pedido</a></li>
                                 <li><a href="/pedido/info/todos">Todos pedidos</a></li>
                                 <li><a href="/pedido/info/ativos">Pedidos ativos</a></li>
                                 <li><a href="/pedido/info/nao-pagos">Pedidos não pagos</a></li>
