--- a/src/main/webapp/footer-template.html
+++ b/src/main/webapp/footer-template.html
@@ -10,7 +10,6 @@
 
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
 	<script src="/js/datatables.min.js" type="text/javascript" charset="utf8"></script>
 	<script src="/js/jquery.mask.js"></script>
 	
@@ -20,3 +19,4 @@
     <script src="/js/jquery.isotope.min.js"></script>
     <script src="/js/wow.min.js"></script>
     -->
+     <!-- <script src="/js/main-template.js"></script> -->
