Possível cadastrar novo cliente na tela de pagamento, feito através de solicitação AJAX e modals

--- a/src/main/webapp/footer-template.html
+++ b/src/main/webapp/footer-template.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="midnight-blue page-row footer">
+	<footer id="footer" class="midnight-blue page-row footer">
         <div class="container footer">
             <div class="row">
                 <div class="col-sm-6">
@@ -6,7 +6,7 @@
                 </div>
             </div>
         </div>
-</footer><!--/#footer-->
+	</footer><!--/#footer-->
 
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
@@ -18,5 +18,5 @@
 	<script src="/js/jquery.prettyPhoto.js"></script> 
     <script src="/js/jquery.isotope.min.js"></script>
     <script src="/js/wow.min.js"></script>
+    <script src="/js/main-template.js"></script> 
     -->
-     <!-- <script src="/js/main-template.js"></script> -->
