--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -1,11 +1,10 @@
 <link href="/css/bootstrap.min.css" rel="stylesheet">
 <link href="/css/bootstrap-datetimepicker.min.css" rel="stylesheet">
 <link href="/css/font-awesome.min.css" rel="stylesheet">
-<link href="/css/prettyPhoto.css" rel="stylesheet">
 <link href="/css/animate.min.css" rel="stylesheet">
-<link href="/css/main.css" rel="stylesheet">
 <link href="/css/responsive.css" rel="stylesheet">
 <link href="/css/datatables.min.css" rel="stylesheet" type="text/css" >
+<link href="/css/main.css" rel="stylesheet">
 
 <script src="https://use.fontawesome.com/8b53352e30.js"></script>
 
@@ -13,16 +12,25 @@
 
  	<header id="header" class="page-row">
         <nav class="navbar navbar-inverse" role="banner">
-            <div class="container">
+            <div class="container-fluid">
                 <div class="navbar-header">
-                    <h1><i class="fa fa-cutlery" aria-hidden="true"></i> Hirano Vendas</h1>
+                	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu-collapse" aria-expanded="false">
+                		<span class="sr-only">Toggle navigation</span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+				        <span class="icon-bar"></span>
+                	</button>
+                	<a class="navbar-brand" href="#">
+                    	<i class="fa fa-cutlery" aria-hidden="true"></i> Hirano Vendas
+                    </a>
                 </div>
                 
-                <div class="collapse navbar-collapse navbar-right">
+                <div class="collapse navbar-collapse navbar-right " id="menu-collapse">
                     <ul class="nav navbar-nav">
                         <li><a href="/">Home</a></li>
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Cliente <i class="fa fa-angle-down"></i></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown"  role="button" aria-haspopup="true" aria-expanded="false">
+                            	Cliente <i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
                                 <li><a href="/cliente/novo">Cadastrar cliente</a></li>
                                 <li><a href="/cliente/todos">Clientes cadastrados</a></li>
