--- a/src/main/webapp/header-template.html
+++ b/src/main/webapp/header-template.html
@@ -46,6 +46,7 @@
                                 <li><a href="/pedido/info/nao-pagos">Pedidos não pagos</a></li>
                                 <li><a href="/pedido/info/por/torre">Pedidos por torre</a></li>
                                 <li><a href="/pedido/info/por/dia">Pedidos por dia</a></li>
+                                <li><a href="/pedido/info/fechamento/dia">Fechamento do dia</a></li>
                             </ul>
                         </li>
                         <li class="dropdown">
